[package]
name = "hello_world"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
skip-no-mangle = ["solana-sdk/skip-no-mangle"]
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
byteorder = "1.3"
solana-sdk = { version = "=1.3.9", default-features = false, optional = true }

[lib]
name = "hello_world"
crate-type = ["cdylib", "lib"]