
# Note: This crate must be built using do.sh

[package]
name = "solana-fantasy-sports"
version = "1.0.0"
description = "Solana Fantasy Sports"
authors = []
repository = "https://github.com/ProtoDao/solana-fantasy-app"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
exclude_entrypoint = []

[dependencies]
byteorder = "1.4"
num-derive = "0.3"
num-traits = "0.2"
remove_dir_all = "=0.5.3"
solana-program = "1.5.13"
thiserror = "1.0"
arrayref = "0.3.6"
num_enum = "0.5.1"

[dev-dependencies]
rand = { version = "0.8.1"}

[lib]
crate-type = ["cdylib", "lib"]
